Independent SetBounds()